# mazolkatools

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
docs/: README.md
mazolkatools/: analysis.py  cleaning.py  exceptions.py  formating.py
src/mazolkatools/: __init__.py
tests/: test_analusis.py  test_cleaning.py  test_formating.py
